[package]
name = "fuse"
edition = "2018"
version = "0.4.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/rust-fuse"
repository = "https://github.com/zargony/rust-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
travis-ci = { repository = "zargony/rust-fuse" }

[features]
default = ["libc"]
no-libc = ["libc-unix-shim"]

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.4.0-dev" }
fuse-sys = { path = "./fuse-sys", version = "=0.4.0-dev" }
libc = { optional = true, version = "0.2.51" }
libc-unix-shim = { optional = true, git = "https://github.com/geropl/rs-libc-unix-shim", branch = "master" }
log = "0.4.6"
thread-scoped = "1.0.2"

[dev-dependencies]
env_logger = "0.6.0"
