[package]
name = "fuse"
version = "0.3.1"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
build = "build.rs"
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/rust-fuse"
repository = "https://github.com/zargony/rust-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[badges]
travis-ci = { repository = "zargony/rust-fuse" }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["libc"]
no-libc = ["libc-unix-shim"]

[dependencies]
libc = { optional = true, version = "0.2" }
libc-unix-shim = { optional = true, git = "https://github.com/geropl/rs-libc-unix-shim", branch = "master" }
log = "0.3"
time = "0.1"
thread-scoped = "1"

[dev-dependencies]
env_logger = "0.3"

[lib]
name = "fuse"
path = "src/lib.rs"
